<resources>
    <string name="app_name">AppQuizlet</string>
    <string name="name">Quizlet</string>
    <string name="title_activity_splash_search">SplashSearch</string>
    <string name="splash_text1">Over 90% of students who use Quizlet report higher grades</string>
    <string name="splash_text2">Search millions of flashcard sets</string>
    <string name="splash_text3">Learn in four different ways and everywhere</string>
    <string name="splash_text4">Customize flashcards to your exact needs</string>
    <string name="or_log_with">Quick log in with</string>
    <string name="or_sign_up_with">Quick sign up with</string>
    <string name="or_log_with_email">Or Log in with your email</string>
    <string name="email_add">Email address</string>
    <string name="or_sign_up_email">Or Sign up with your email</string>
    <string name="email_or_username">Email or username</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="or_log_in">Or Log in</string>
    <string name="dob">Date of Birth</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="gg">Google</string>
    <string name="fb">Facebook</string>
    <string name="select_dob">Select your date of birth</string>
    <string name="email_hint">email@example.com</string>
    <string name="pass_hint">*********</string>
    <string name="forgot_u_p">Forgot username or password ?</string>
    <string name="terms_of_service">By signing up, I accept Quizlet\'s Terms of Services and Privacy Policy</string>
    <string name="forgot_username">Forgot username</string>
    <string name="reset_password">Reset your password</string>
    <string name="forgot_pass_text">Enter your Quizlet username or the email address you signed up with. We\'ll
    email you a link to log in and reset your password
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="li_home">Home</string>
    <string name="li_solution">Solution</string>
    <string name="li_library">Library</string>
    <string name="li_profile">Profile</string>
    <string name="pf_upgrade">Upgrade</string>
    <string name="pf_your_equipment">Your settings</string>
    <string name="pf_achievement">Achievements</string>
    <string name="pf_your_courses">Your courses</string>
    <string name="pf_achievement_quote">Study tomorrow to keep your streak going! </string>
    <string name="view_all">View all</string>
    <string name="settings">Settings</string>
    <string name="account_type">Account Type</string>
    <string name="free">Free</string>
    <string name="btn_upgrade_free_trial">Upgrade : Free trial</string>
    <string name="add_course">Add course</string>
    <string name="change_pass">Change password</string>
    <string name="notification">Notifications</string>
    <string name="light_mode">Light mode</string>
    <string name="always_on">Always off</string>
    <string name="always_off">Always off</string>
    <string name="save_for_offline">Save sets for offline use</string>
    <string name="recent_sets">Recent sets will not be downloaded</string>
    <string name="help_center">Help Center</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="log_out">Log out</string>
    <string name="course">Course</string>
    <string name="add_course_text">Add a course so we can get the best study content to you</string>
    <string name="title_activity_add_course">Add_Course</string>
    <string name="lb_study_sets">Study sets</string>
    <string name="lb_folders">Folders</string>
    <string name="folder">Folder</string>
    <string name="lb_classes">Classes</string>
    <string name="filter">Filter</string>
    <string name="add_classes">Create classes</string>
    <string name="add_study_set">Create study sets</string>
    <string name="add_folder">Create folder</string>
    <string name="search_hint">Study sets, textbooks, questions</string>
    <string name="free_trail">Free trail</string>
    <string name="not_in_course">I\'m not in course</string>
    <string name="sl_title">Expert solutions</string>
    <string name="sl_search_hint">Textbooks, ISBNs, questions</string>
    <string name="search_splash">Search</string>
    <string name="search_enter_topic">Enter a topic or keywords</string>
    <string name="search_tip">Tip : The more specific, the better !</string>
    <string name="oops">Oops !</string>
    <string name="sth_went_wrong">Something went wrong</string>
    <string name="go_to_home">Go to home</string>
    <string name="errBlankEmail">Email is required !</string>
    <string name="errEmailInvalid">Email is invalid</string>
    <string name="errInsufficientLength">Password is too weak</string>
    <string name="errBlankPass">Password is required !</string>
    <string name="helper_email">Type email with form name@gmail.com</string>
    <string name="helper_pass">Type at least 6 characters, 1 special character and no white space</string>
    <string name="hint_create_set">Subject, chapter, unit</string>
    <string name="title">Title</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="description">Description</string>
    <string name="create_set">Create set</string>
    <string name="title_activity_create_set">CreateSet</string>
    <string name="create_card">Create new card</string>
    <string name="folder_name">Folder name</string>
    <string name="desc_optional">Description (Optional)</string>
    <string name="create_class">Create class</string>
    <string name="scan_doc">Scan document</string>
    <string name="all_caught_up">You\'are all caught up</string>
    <string name="ok">OK</string>
    <string name="class_add_group">Group study material to save time and share with other Quizlet members</string>
    <string name="create_a_class">Create a class</string>
    <string name="edit">Edit</string>
    <string name="add_set">Add sets</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_text">Are you sure you want to delete this folder permanently? The sets inside will be not deleted</string>
    <string name="course_name">Course name</string>
    <string name="done">Done</string>
    <string name="login_success">Login successful 🍾</string>
    <string name="failed_sign_up">Something went wrong when sign up ! Please try again !</string>
    <string name="sign_in_success">Sign in account successful 🍾</string>
    <string name="wait">Loading. Please wait …</string>
    <string name="not_enough_age">You don\'t enough age for sign up !</string>
    <string name="create_folder_success">Create folder successful !</string>
    <string name="creating">Creating folder. Please wait …</string>
    <string name="create_study_set_success">Create study set successful !</string>
    <string name="wrong_email_or_pass">Wrong email or password> Please try again !</string>
    <string name="loginNameField">loginName</string>
    <string name="loginPasswordField">loginPassword</string>
    <string name="emailField">email</string>
    <string name="dobField">dateOfBirth</string>
    <string name="createFolderNameField">name</string>
    <string name="descriptionField">description</string>
    <string name="add_to_folder">Add to Folder</string>
    <string name="add_to_class">Add to class</string>
    <string name="save_and_edit">Save and edit</string>
    <string name="delete_set">Delete set</string>
    <string name="cards">Cards</string>
    <string name="flashcards">FlashCards</string>
    <string name="review_term">Review terms and definations</string>
    <string name="test">Test</string>
    <string name="take_a_practice">Take a practice test</string>
    <string name="study_this_set">Study this set</string>
    <string name="tab_to_flip">Tab the card to flip</string>
    <string name="set_options">Set options</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="language">Language</string>
    <string name="terms">Terms</string>
    <string name="select_language">Select language</string>
    <string name="definitions">Definitions</string>
    <string name="privacy">Privacy</string>
    <string name="visible_to">Visible to</string>
    <string name="just_me">Just me</string>
    <string name="new_class">New class</string>
    <string name="class_title">Class title</string>
    <string name="updateLoadMes">Uploading folder …</string>
    <string name="deleteFolderSuccessful">Delete folder successful</string>
    <string name="deleteFolderErr">Something went wrong when delete folder. Please try again !</string>
    <string name="deleteSetErr">Something went wrong when delete study set. Please try again !</string>
    <string name="update_folder_success">Update folder successful</string>
    <string name="update_study_set_success">Update study set successful</string>
    <string name="deleteFolderLoading">Folder deleting …</string>
    <string name="deleteSetLoading">Folder deleting …</string>
    <string name="created">Created</string>
    <string name="studied">Studied</string>
    <string name="folders">Folders</string>
    <string name="sortCard">Sort card</string>
    <string name="download">Download</string>
    <string name="in_original_order">In original order</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="sort_term">Sort terms</string>
    <string name="edit_by">Editable by</string>
    <string name="delete_this_set">Are you sure you want to delete this set permanently ?</string>
    <string name="creatingStudySet">Creating study set</string>
    <string name="allNewCards">allNewCards</string>
    <string name="updating_study_set">Updating study set …</string>
    <string name="good_job">Good job !</string>
    <string name="you_learn_all">You learned all the flashcard in this study set. Keep trying💪💪</string>
    <string name="learn_other_set">Learn other study set</string>
    <string name="quizlette">quizlette</string>
    <string name="options">Options</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_audio">Play audio</string>
    <string name="card_orientation">Card orientation</string>
    <string name="reset_flashcard">Reset flashcard</string>
    <string name="no_data_found">No data found !</string>
    <string name="please_try_learn_other">Now, there is no flashcard in this study set. Please try to learn other study set</string>
    <string name="there_no_set_in_folder">No study set found in this folder</string>
    <string name="no_set_found">No data</string>
    <string name="add_set_to_folder">Add study set to this folder</string>
    <string name="studyset_name_required">Study set name is required !</string>
    <string name="this_field_cannot_empty">This field cannot empty !</string>
    <string name="remove_set_from_folder">Study set is removed from this folder</string>
    <string name="remove_set_folder_loading">Removing set</string>
    <string name="warning">Warning !</string>
    <string name="confirm_remove_set_from_folder">Are you sure to delete this study set from this folder ?</string>
    <string name="accept">Accept</string>
    <string name="confirm_delete_folder">Are you sure to delete this folder ?</string>
    <string name="public_set">Public set</string>
    <string name="save">Save</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm password</string>
</resources>