<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/li_home" />
    <item
        android:id="@+id/bottom_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/book"
        android:title="@string/li_solution" />
    <item
        android:id="@+id/bottom_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/add"
        android:title="" />
    <item
        android:id="@+id/bottom_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/folder"
        android:title="@string/li_library" />
    <item
        android:id="@+id/bottom_edit_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/user_edit"
        android:title="@string/li_profile" />
</menu>