<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".SignUp">
    <!-- Thêm một Toolbar vào layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/Theme.AppQuizlet.PopupOverlay"
        app:title="" />


<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/or_sign_up_with"-->
<!--        android:textAllCaps="true" />-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:orientation="horizontal">-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnSigninGoogle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/gg"-->
<!--            android:textColor="@color/white" />-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnSignInFb"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/fb"-->
<!--            android:textColor="@color/white" />-->
<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_black_primary"
        android:layout_marginBottom="5dp"
        android:text="@string/or_sign_up_email"
        android:alpha="0.8"
        android:textAllCaps="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:textColorHint="@color/txt_black_primary"
            android:hint="@string/select_dob"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textColor="@color/txt_black_primary"
        android:alpha="0.8"
        android:textAllCaps="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:textColorHint="@color/txt_black_primary"
        app:errorTextAppearance="@style/CustomTextInputLayout"
        app:helperText="@string/helper_email"
        app:helperTextTextAppearance="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:textColorHint="@color/txt_black_primary"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_add"
        android:textAllCaps="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/pass_hint"
        android:textColorHint="@color/txt_black_primary"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/CustomTextInputLayout"
        app:helperText="@string/helper_pass"
        app:helperTextTextAppearance="@style/CustomTextInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/password"
        android:textColor="@color/txt_black_primary"
        android:textAllCaps="true" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_splash"
        android:text="@string/sign_up"
        android:textColor="@color/txt_white_in_btn" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtTermsOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/txt_black_primary"
        android:text="@string/terms_of_service" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription=""
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/intr_su" />

    <!-- Điều này ẩn tiêu đề (chữ) trên Toolbar -->


</LinearLayout>