<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_change_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/Theme.AppQuizlet.PopupOverlay"
        app:title="@string/change_pass"
        app:titleTextColor="@color/txt_black_primary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/save"
                android:textColor="@color/txt_blue"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        app:endIconMode="password_toggle"
        android:hint="@string/current_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/txt_black_primary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/CustomTextInputLayout"
        app:helperText="@string/helper_pass"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:helperTextTextAppearance="@style/CustomTextInputLayout"
        android:hint="@string/new_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/txt_black_primary"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        app:endIconMode="password_toggle"
        android:hint="@string/confirm_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_your_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/txt_black_primary" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>