<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    android:orientation="vertical"
    tools:context=".SetOptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextColor="@color/txt_black_primary"
        app:popupTheme="@style/Theme.AppQuizlet.PopupOverlay"
        app:title="@string/set_options">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/mar_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingHorizontal="@dimen/mar_10"
            android:text="@string/language"
            android:textColor="@color/txt_black_primary"
            android:alpha="0.6"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/mar_10"
            android:paddingVertical="@dimen/pad_20">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/txt_black_primary"
                android:text="@string/terms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_language"
                android:textColor="@color/txt_blue_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/mar_10"
            android:paddingVertical="@dimen/pad_20">

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_black_primary"
                android:layout_weight="1"
                android:text="@string/definitions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_language"
                android:textColor="@color/txt_blue_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_10"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/mar_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textColor="@color/txt_black_primary"
            android:paddingHorizontal="@dimen/mar_10"
            android:text="@string/privacy"
            android:alpha="0.6"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/mar_10"
            android:paddingVertical="@dimen/pad_20">

            <TextView
                android:id="@+id/txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/txt_black_primary"
                android:text="@string/visible_to"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Everyone"
                android:textColor="@color/txt_blue_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/mar_10"
            android:paddingVertical="@dimen/pad_20">

            <TextView
                android:id="@+id/txt14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/txt_black_primary"
                android:text="@string/edit_by"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/just_me"
                android:textColor="@color/txt_blue_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_10"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/pad_20"
        android:paddingVertical="@dimen/pad_20">

        <TextView
            android:id="@+id/btnDeleteSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_set"
            android:textColor="@color/txt_delete_teal"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>